Bug 1663685 - Do not apply content-visibility to elements with a principal internal table box r=emilio

The code for determining this is now shared with that for `contain: size`,
since the specification says that `content-visibility` follows `contain:
size` in determining applicability.

Differential Revision: https://phabricator.services.mozilla.com/D166689